# SpotMod

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  SpotMod Injector.spec  build.py  data.json  inject.py  main.py  pyproject.toml  requirements.txt  utils.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
SpotMod-dat/: data.json  loader.js
src/: inject.py  main.py  updater.py  utils.py
src/default_dat/: data.json
src/default_dat/SpotMod-dat/: data.json  loader.js
